--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Nhóm: The Stair</h1>
+      <h1>Nhóm: 16</h1>
     </header>
     <main>
       <section class="group-info">
